<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <RelativeLayout
        android:id="@+id/headLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:id="@+id/headText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_shopping_list"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:layout_centerInParent="true"/>

    </RelativeLayout>





    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headLayout"
        android:layout_marginTop="20dp"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_buttonMain"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/add_items"
        app:cornerRadius="15dp"
        android:layout_marginLeft="70dp"
        android:layout_alignParentBottom="true"
        android:onClick="onBtnAddClick"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/teal_700"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_toLeftOf="@+id/deleteListMain"
        android:layout_toRightOf="@+id/add_buttonMain"
        android:layout_alignParentBottom="true"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteListMain"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_list"
        app:cornerRadius="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="70dp"
        android:layout_alignParentRight="true"
        android:backgroundTint="@color/teal_700"
        android:onClick="onBtnDeleteListClick"/>


</RelativeLayout>